--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -52,12 +52,11 @@ input::-webkit-inner-spin-button {
     margin: 0 auto;
     padding: 50px 0 50px 0;
     position: relative;
-    .bg-decoration {
-        position: absolute;
-        right: -174px;
-        bottom: -70px;
-        z-index: -1;
-    }
+}
+
+.bg-decoration {
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
 }
 
 main {
